[gd_scene load_steps=10 format=3 uid="uid://cfi7pkptfmmef"]

[ext_resource type="Script" path="res://menu.gd" id="1_3d2rq"]
[ext_resource type="Texture2D" uid="uid://umjk0pj7phq1" path="res://menu/menu.png" id="2_whgse"]
[ext_resource type="Texture2D" uid="uid://5gtsp1c7ujb6" path="res://menu/bouton_play.png" id="2_x3fen"]
[ext_resource type="Script" path="res://Button.gd" id="3_tlkdk"]
[ext_resource type="Texture2D" uid="uid://comwr6l1j2nhq" path="res://menu/bouton_cinematic.png" id="5_h5gfs"]
[ext_resource type="AudioStream" uid="uid://dh8ciox7n50bx" path="res://audio/home.wav" id="6_75lxq"]

[sub_resource type="Animation" id="Animation_1ie2i"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0tjir"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hfv3y"]
_data = {
"fade_in": SubResource("Animation_1ie2i"),
"fade_out": SubResource("Animation_0tjir")
}

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3d2rq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("2_whgse")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.5
offset_top = -860.0
offset_right = 26.5
grow_horizontal = 2
grow_vertical = 0

[node name="playButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_x3fen")
flat = true
script = ExtResource("3_tlkdk")

[node name="CinematicButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_h5gfs")
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_75lxq")
autoplay = true

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hfv3y")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
self_modulate = Color(0, 0, 0, 1)
offset_right = 1078.0
offset_bottom = 1924.0

[connection signal="pressed" from="VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CinematicButton" to="." method="_on_cinematic_button_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
